Add condense functionality